--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
 
 
         </activity>
+        <activity android:name=".activity.PlayActivity"/>
         <service android:name=".service.MusicService"/>
     </application>
 
